--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "merge-descriptors": "^1.0.1",
     "method-override": "^2.3.10",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "mysql": "^2.17.1",
     "request": "^2.88.0"
   },
@@ -70,6 +71,7 @@
     "@types/jest": "^24.0.12",
     "@types/method-override": "0.0.31",
     "@types/morgan": "^1.7.35",
+    "@types/multer": "^1.3.7",
     "@types/node": "^12.0.0",
     "concurrently": "^4.1.0",
     "husky": "^2.2.0",
